added formatting, emoji and font style

--- a/index.html
+++ b/index.html
@@ -1,19 +1,28 @@
 <html>
 <head>
 <title>nitinsawant.com</title>
+    <style type="text/css">
+    .markdown-body {
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
+  font-size: 16px;
+  line-height: 1.5;
+  word-wrap: break-word;
+}
+    </style>
 </head>
-<body>
-    Hi,<br />
+<body class="markdown-body">
+    <b>Hi there</b> 👋<br />
     <br />
-    My name is Nitin. I am a web developer.<br />
+    ⚡ My name is Nitin. I am a web developer.<br />
     <br />
-    I now help startups, businesses and entrepreneurs build their own apps. I am professional and handle everything from helping you 'spec-out' the app to performing the QA, and making sure that it's launched and hosted on a website. I am totally communicative and I have references available upon request.<br />
+    👯 I now help startups, businesses and entrepreneurs build their own apps. I am professional and handle everything from helping you 'spec-out' the app to performing the QA, and making sure that it's launched and hosted on a website. I am totally communicative and I have references available upon request.<br />
     <br />
-    Send me an email to schedule a free consultation.<br />
+    💬 <a href="mailto:nitin@nitinsawant.com">Send</a> me an email to schedule a free consultation.<br />
     <br />
     Thanks,<br />
     Nitin<br /><br />
-    <a href="mailto:consult@nitinsawant.com">consult@nitinsawant.com</a><br/>
-    <a href="https://blog.nitinsawant.com/">Nitin's blog</a>
+    <a href="mailto:nitin@nitinsawant.com">consult@nitinsawant.com</a><br/>
+    <a href="https://blog.nitinsawant.com/">Nitin's blog</a><br/>
+    <a href="https://join.skype.com/vf00tYHEXShb">Connect On Skype</a>
 </body>
 </html>
