added skype link

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>nitinsawant.com</title>
+<title>Nitin's website | अनुगच्छतु प्रवाह</title>
     <style type="text/css">
     .markdown-body {
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
@@ -14,15 +14,12 @@
     <b>Hi there</b> 👋<br />
     <br />
     ⚡ My name is Nitin. I am a web developer.<br />
-    <br />
     👯 I now help startups, businesses and entrepreneurs build their own apps. I am professional and handle everything from helping you 'spec-out' the app to performing the QA, and making sure that it's launched and hosted on a website. I am totally communicative and I have references available upon request.<br />
-    <br />
-    💬 <a href="mailto:nitin@nitinsawant.com">Send</a> me an email to schedule a free consultation.<br />
+    💬 <a href="mailto:nitin@nitinsawant.com">Send</a> me an email or connect on <a href="https://join.skype.com/vf00tYHEXShb">Skype</a> to schedule a free consultation. to schedule a free consultation.<br />
     <br />
     Thanks,<br />
-    Nitin<br /><br />
-    <a href="mailto:nitin@nitinsawant.com">consult@nitinsawant.com</a><br/>
+    Nitin<br />
+    <a href="mailto:nitin@nitinsawant.com">nitin@nitinsawant.com</a><br/>
     <a href="https://blog.nitinsawant.com/">Nitin's blog</a><br/>
-    <a href="https://join.skype.com/vf00tYHEXShb">Connect On Skype</a>
 </body>
 </html>
