--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <br />
     ⚡ My name is Nitin. I am a web developer.<br />
     👯 I now help startups, businesses and entrepreneurs build their own apps. I am professional and handle everything from helping you 'spec-out' the app to performing the QA, and making sure that it's launched and hosted on a website. I am totally communicative and I have references available upon request.<br />
-    💬 <a href="mailto:nitin@nitinsawant.com">Send</a> me an email or connect on <a href="https://join.skype.com/vf00tYHEXShb">Skype</a> to schedule a free consultation. to schedule a free consultation.<br />
+    💬 <a href="mailto:nitin@nitinsawant.com">Send</a> me an email or connect on <a href="https://join.skype.com/vf00tYHEXShb">Skype</a> to schedule a free consultation.<br />
     <br />
     Thanks,<br />
     Nitin<br />
