--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Nitin's website | अनुगच्छतु प्रवाह</title>
+<title>Nitin's website</title>
     <style type="text/css">
     .markdown-body {
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
