--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   word-wrap: break-word;
 }
     </style>
+    <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
 </head>
 <body class="markdown-body">
     <b>Hi there</b> 👋<br />
@@ -20,5 +21,8 @@
     Thanks,<br />
     Nitin<br />
     <a href="https://blog.nitinsawant.com/">Nitin's blog</a><br/>
+    <br/>
+    <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="large" data-theme="light" data-type="HORIZONTAL" data-vanity="nitinjs" data-version="v1"></div>
+              
 </body>
 </html>
