--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
     👯 I now help startups, businesses and entrepreneurs build their own apps. I am professional and handle everything from helping you 'spec-out' the app to performing the QA, and making sure that it's launched and hosted on a website. I am totally communicative and I have references available upon request.<br />
     💬 <a href="mailto:nitin@nitinsawant.com">Send</a> me an email or connect on <a href="https://join.skype.com/vf00tYHEXShb">Skype</a> to schedule a free consultation.<br />
     <br />
-    Thanks,<br />
-    Nitin<br />
-    <a href="https://blog.nitinsawant.com/">Nitin's blog</a><br/>
+    <a href="https://blog.nitinsawant.com/" style="font-size: 26px;">Nitin's blog</a><br/>
     <br/>
     <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="large" data-theme="light" data-type="HORIZONTAL" data-vanity="nitinjs" data-version="v1"></div>
               
