--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
 
+<html>
+<head>
+<title>Nitin's website</title>
+    <style type="text/css">
+    .markdown-body {
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
+  font-size: 16px;
+  line-height: 1.5;
+  word-wrap: break-word;
+}
+    </style>
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+</head>
+<body class="markdown-body">
+    <b>Hi there</b> 👋<br />
+    <br />
+    ⚡ My name is Nitin. I am a web developer.<br />
+    👯 I now help startups, businesses and entrepreneurs build their own apps. I am professional and handle everything from helping you 'spec-out' the app to performing the QA, and making sure that it's launched and hosted on a website. I am totally communicative and I have references available upon request.<br />
+    💬 <a href="mailto:nitin@nitinsawant.com">Send</a> me an email or connect on <a href="https://join.skype.com/vf00tYHEXShb">Skype</a> to schedule a consultation.<br />
+    <br />
+    <a href="https://blog.nitinsawant.com/" style="font-size: 20px;">Nitin's blog</a><br/>
+    <br/>          
+</body>
+</html>
