--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <b>Hi there</b> 👋<br />
     <br />
     ⚡ My name is Nitin. I am a web developer.<br />
-    👯 I now help startups, businesses and entrepreneurs build their own apps. I am professional and handle everything from helping you 'spec-out' the app to performing the QA, and making sure that it's launched and hosted on a website. I am totally communicative and I have references available upon request.<br />
+    👯 I now work with startups, businesses and entrepreneurs build their own apps. I am professional and handle everything from 'spec-out' the app to performing the QA, and making sure that it's launched and hosted on a website. I am totally communicative and I have references available upon request.<br />
     💬 <a href="mailto:nitin@nitinsawant.com">Send</a> me an email or connect on <a href="https://join.skype.com/vf00tYHEXShb">Skype</a> to schedule a consultation.<br />
     <br />
     <a href="https://blog.nitinsawant.com/" style="font-size: 20px;">Nitin's blog</a><br/>
