--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 <body class="markdown-body">
     <b>Hi there</b> 👋<br />
     <br />
-    ⚡ My name is Nitin. I am a web developer.<br />
-    👯 I now work with startups, businesses and entrepreneurs build their own apps. I am professional and handle everything from 'spec-out' the app to performing the QA, and making sure that it's launched and hosted on a website. I am totally communicative and I have references available upon request.<br />
-    💬 <a href="mailto:nitin@nitinsawant.com">Send</a> me an email or connect on <a href="https://join.skype.com/vf00tYHEXShb">Skype</a> to schedule a consultation.<br />
+    ⚡ My name is <a href="https://www.linkedin.com/in/nitinjs/" target="_blank">Nitin Sawant</a>. I am a web developer.<br />
+    👯 I now work with startups, SME businesses and entrepreneurs build their own apps. I am professional and handle everything from 'spec-out' the app to performing the QA, and making sure that it's launched and hosted on a website. I am totally communicative and I have references available upon request.<br />
+    💬 <a href="mailto:nitin@nitinsawant.com">Send</a> me an email or connect on <a href="https://join.skype.com/vf00tYHEXShb">Skype</a> to schedule a consultation or you want to know how to contact yourself in the future 😜.<br />
     <br />
-    <a href="https://blog.nitinsawant.com/" style="font-size: 20px;">Nitin's blog</a><br/>
-    <br/>          
+    You can browse some of the open source projects <a href="https://github.com/nitinjs?tab=repositories" target="_blank" style="font-size: 20px;">here</a><br/>
+    <br/>
 </body>
 </html>
