Update index.html for devnitin

--- a/index.html
+++ b/index.html
@@ -1,23 +1,25 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <title>Nitin's website | hosted by github</title>
-    <link href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
+    <link href="https://netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="https://netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,300' rel='stylesheet' type='text/css' />
     <style type="text/css">
         html {
-            background-image: url('files/2015-10-29_WeepingWillow_ROW12014484714_1920x1080.jpg');
+            background-image: url('files/universe.jpg');
             background-size: cover; /* <------ */
             background-repeat: no-repeat;
             background-position: center center; /* optional, center the image */
         }
+
         body, .jumbotron {
             background-color: transparent;
         }
+
         .panel {
             position: relative;
             font-family: 'Open Sans';
@@ -120,7 +122,7 @@
                         <div class="panel-rightbody">
                             <p>
                                 Hi there 👋<br />
-                                ✨ My name is Nitin Sawant. I am a web developer.<br />
+                                ✨ My name is Nitin Sawant. I am a full stack developer.<br />
                                 <br />
                                 🌱 I’m currently working with startups, SME businesses and entrepreneurs build their own apps. I am professional and handle everything from ‘spec-out’ the app to performing the QA, and making sure that it’s launched and hosted on a website. I am totally communicative and I have references available upon request.<br />
                                 <br />
