--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                                 <br />
                                 🌱 I’m currently working with startups, SME businesses and entrepreneurs build their own apps. I am professional and handle everything from ‘spec-out’ the app to performing the QA, and making sure that it’s launched and hosted on a website. I am totally communicative and I have references available upon request.<br />
                                 <br />
-                                📫 Send me an <a href="mailto:nitin@devnitin.com&subject=Discuss project with nitin">email</a> or connect on <a href="skype:nitinsawant.com?chat">Skype</a> to schedule a consultation.<br />
+                                📫 Send me an <a href="mailto:nitin@devnitin.com&subject=Discuss project with nitin">email</a> or connect on <a href="skype:nitinsawant.com?chat">Skype</a> to schedule a free project consultation.<br />
                                 <br />
                                 😄 Fun fact: To see the world, things dangerous to come to, to see behind walls, to draw closer, to find each other and feel. That is the Purpose of LIFE.<br />
                                 <br />
