--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                                 😄 Fun fact: To see the world, things dangerous to come to, to see behind walls, to draw closer, to find each other and feel. That is the Purpose of LIFE.<br />
                                 <br />
                                 <mark>Just another line of open source code: <a href="https://github.com/nitinjs?tab=repositories" target="_blank">https://github.com/nitinjs?tab=repositories</a><br />
-                                blog: <a href="https://blog.nitinsawant.com" target="_blank">https://blog.nitinsawant.com</a><br />
+                                blog: <a href="https://blog.devnitin.com" target="_blank">https://blog.nitinsawant.com</a><br />
                                 linkedin: <a href="http://www.linkedin.com/in/nitinjs" target="_blank">http://www.linkedin.com/in/nitinjs</a><br /></mark>
                             </p>
                         </div>
