--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <link href="https://netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="https://netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,300' rel='stylesheet' type='text/css' />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Sans:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
+    
     <style type="text/css">
         html {
             background-image: url('files/universe.jpg');
@@ -18,11 +21,12 @@
 
         body, .jumbotron {
             background-color: transparent;
+            font-family: "Ubuntu Sans", serif;
         }
 
         .panel {
             position: relative;
-            font-family: 'Open Sans';
+            font-family: 'Ubuntu Sans';
         }
 
         .panel-default > .panel-leftheading {
@@ -122,17 +126,19 @@
                         <div class="panel-rightbody">
                             <p>
                                 Hi there 👋<br />
-                                ✨ My name is Nitin Sawant. I am a full stack developer.<br />
+                                ✨ My name is Nitin S. I have 14+ years of experience working as full stack web developer.<br />
+                                I have Bsc - Computer science degree and also done GNIIT software engineering course from NIIT<br/>
                                 <br />
                                 🌱 I’m currently working with startups, SME businesses and entrepreneurs build their own apps. I am professional and handle everything from ‘spec-out’ the app to performing the QA, and making sure that it’s launched and hosted on a website. I am totally communicative and I have references available upon request.<br />
                                 <br />
-                                📫 Send me an <a href="mailto:nitin@devnitin.com&subject=Discuss project with nitin">email</a> or connect on <a href="skype:nitinsawant.com?chat">Skype</a> to schedule a free project consultation.<br />
+                                📫 Send me an <a href="mailto:nitin@nitinsawant.com&subject=Consult with nitin">email</a> or connect on <a href="skype:nitinsawant.com?chat">Skype</a> to schedule a project consultation.<br />
                                 <br />
+                                More about me on linkedin: <a href="http://www.linkedin.com/in/nitinjs" target="_blank">http://www.linkedin.com/in/nitinjs</a><br />
                                 😄 Fun fact: To see the world, things dangerous to come to, to see behind walls, to draw closer, to find each other and feel. That is the Purpose of LIFE.<br />
                                 <br />
-                                <mark>Just another line of open source code: <a href="https://github.com/nitinjs?tab=repositories" target="_blank">https://github.com/nitinjs?tab=repositories</a><br />
-                                blog: <a href="https://nitinjs.blogspot.com/" target="_blank">https://nitinjs.blogspot.com/</a><br />
-                                linkedin: <a href="http://www.linkedin.com/in/nitinjs" target="_blank">http://www.linkedin.com/in/nitinjs</a><br /></mark>
+                                <mark>Some of the projects I've contributed to in open source: <a href="https://github.com/nitinjs?tab=repositories" target="_blank">https://github.com/nitinjs?tab=repositories</a><br />
+                                This is my blog where I write about `programming` most of the times: <a href="https://nitinjs.blogspot.com/" target="_blank">https://nitinjs.blogspot.com/</a><br />
+                                </mark>
                             </p>
                         </div>
                         <div class="clearfix">
