--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                                 <br />
                                 🌱 I’m currently working with startups, SME businesses and entrepreneurs build their own apps. I am professional and handle everything from ‘spec-out’ the app to performing the QA, and making sure that it’s launched and hosted on a website. I am totally communicative and I have references available upon request.<br />
                                 <br />
-                                📫 Send me an <a href="mailto:nitin@nitinsawant.com&subject=Consult with nitin">email</a> or connect on <a href="skype:nitinsawant.com?chat">Skype</a> to schedule a project consultation.<br />
+                                📫 Send me an <a href="mailto:nitin@nitinsawant.com&subject=Consult with nitin">email</a> or connect on <a href="https://join.skype.com/vf00tYHEXShb" target="_blank">Skype</a> to schedule a project consultation.<br />
                                 <br />
                                 More about me on linkedin: <a href="https://www.linkedin.com/in/nitinjs" target="_blank">https://linkedin.com/in/nitinjs</a><br />
                                 <br />
