--- a/index.html
+++ b/index.html
@@ -126,19 +126,15 @@
                         <div class="panel-rightbody">
                             <p>
                                 Hi there 👋<br />
-                                ✨ My name is Nitin S. I have <a href="https://www.linkedin.com/in/nitinjs" target="_blank" title="Download resume">14+ years of experience</a> working as full stack web developer.<br />
+                                ✨ My name is Nitin S. I have <a href="https://www.linkedin.com/in/nitinjs" target="_blank" title="Download resume">14+ years of experience</a> working as .NET web developer.<br />
                                 I have Bsc - Computer science degree and also done GNIIT software engineering course from NIIT<br/>
-                                <br />
-                                🌱 I’m currently working with startups, SME businesses and entrepreneurs build their own apps. I am professional and handle everything from ‘spec-out’ the app to performing the QA, and making sure that it’s launched and hosted on a website. I am totally communicative and I have references available upon request.<br />
-                                <br />
-                                📫 Send me an <a href="mailto:nitin@nitinsawant.com&subject=Consult with nitin">email</a> or connect on <a href="https://join.skype.com/vf00tYHEXShb" target="_blank">Skype</a> to schedule a project consultation.<br />
                                 <br />
                                 More about me on linkedin: <a href="https://www.linkedin.com/in/nitinjs" target="_blank">https://linkedin.com/in/nitinjs</a><br />
                                 <br />
                                 😄 Fun fact: To see the world, things dangerous to come to, to see behind walls, to draw closer, to find each other and feel. That is the Purpose of LIFE.<br />
                                 <br />
                                 <mark>Some of the projects I've contributed to in open source: <a href="https://github.com/nitinjs?tab=repositories" target="_blank">https://github.com/nitinjs</a><br />
-                                This is my blog where I write about `programming` most of the times: <a href="https://blog.nitinsawant.com/" target="_blank">https://blog.nitinsawant.com/</a><br />
+                                This is my blog where I write about `programming` for the most part: <a href="https://blog.nitinsawant.com/" target="_blank">https://blog.nitinsawant.com/</a><br />
                                 </mark>
                             </p>
                         </div>
