--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                         <div class="panel-rightbody">
                             <p>
                                 Hi there 👋<br />
-                                ✨ My name is Nitin S. I have <a href="https://www.linkedin.com/in/nitinjs" target="_blank" title="Download resume">14+ years of experience</a> working as .NET web developer.<br />
+                                ✨ My name is Nitin S. I have <a href="https://www.linkedin.com/in/nitinjs" target="_blank" title="Download resume">14+ years of experience</a> working as full stack web developer.<br />
                                 I have Bsc - Computer science degree and also done GNIIT software engineering course from NIIT<br/>
                                 <br />
                                 More about me on linkedin: <a href="https://www.linkedin.com/in/nitinjs" target="_blank">https://linkedin.com/in/nitinjs</a><br />
