--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                                 😄 Fun fact: To see the world, things dangerous to come to, to see behind walls, to draw closer, to find each other and feel. That is the Purpose of LIFE.<br />
                                 <br />
                                 <mark>Some of the projects I've contributed to in open source: <a href="https://github.com/nitinjs?tab=repositories" target="_blank">https://github.com/nitinjs</a><br />
-                                This is my blog where I write about `programming` for the most part: <a href="https://blog.nitinsawant.com/" target="_blank">https://blog.nitinsawant.com/</a><br />
+                                This is my blog where I write about `programming` for the most part: <a href="https://blog.nitinsawant.com/" target="_blank">https://blog.nitinsawant.com/</a>
                                 </mark>
                             </p>
                         </div>
