--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <meta charset="utf-8" />
+    <link href='https://blog.nitinsawant.com/favicon.ico' rel='icon' type='image/x-icon'/>
+    <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'/>
     <title>Nitin's website | .NET tips and tricks</title>
     <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
     <link href="https://netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
